fixed right side gap on entire webpage

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -332,6 +332,10 @@ form {
     .features {
         background-image: none;
     }
+    // Stats 
+    .card-stats img {
+        width: 100%;
+    }
 
 }
 
